--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -1,11 +1,20 @@
 <resources>
     <string name="app_name">KartWheel</string>
+    <string name="email">support@handstandwith.us</string>
+    <string name="already_claimed_title">Invalid ticket</string>
+    <string name="contact_us_subject_line">KartWheel - Android</string>
+    <string name="contact_us_body">KartWheel - Android</string>
     <string name="scroll_down">Scroll down</string>
+    <string name="contact_us">Contact us</string>
     <string name="lets_go">Let\'s go</string>
     <string name="tos">Terms &amp; Conditions</string>
     <string name="enter_code">Enter your ticket code</string>
     <string name="does_not_have_code">Don\'t have code? You\'ll either need to\n phone a friend
     or <a href="www.handstand.us/karwheel">get one online</a>!</string>
+    <string name="already_claimed_explanation">Someone has already claimed this ticket! In order to use this code,
+    they\'ll need to open up their app and forfeit their ticket.\n\nSo you\'re sure this is your ticket?</string>
+    <string name="already_claimed_touch_here">Log in by touching here!</string>
+    <string name="try_different_code">Try different code</string>
     <string name="tos_content">THE KARTWHEEL (\"EVENT\") WAIVER &amp; RELEASE OF CLAIMS, INDEMNITY
         AGREEMENT, ASSUMPTION OF RISK, AND CONSENT TO MEDICAL TREATMENT (\"WAIVER &amp; RELEASE\")\n\n
         PLEASE READ THE FOLLOWING CAREFULLY, AS IT AFFECTS YOUR FUTURE LEGAL RIGHTS. BY PROCEEDING
