--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -1,10 +1,22 @@
 <resources>
     <string name="app_name">KartWheel</string>
-    <string name="email">support@handstandwith.us</string>
+    <string name="support_email">support@handstandwith.us</string>
     <string name="already_claimed_title">Invalid ticket</string>
     <string name="contact_us_subject_line">KartWheel - Android</string>
     <string name="contact_us_body">KartWheel - Android</string>
     <string name="scroll_down">Scroll down</string>
+    <string name="critical_information">Critical information</string>
+    <string name="pancakes_waffles">Pancakes or Waffles?</string>
+    <string name="charmander_squirtle">Charmander or Squirtle?</string>
+    <string name="next">Next</string>
+    <string name="first_name">FIRST</string>
+    <string name="last_name">LAST</string>
+    <string name="email">EMAIL</string>
+    <string name="cell">CELL #</string>
+    <string name="dob">DOB (MM/DD/YYYY)</string>
+    <string name="nickname">NICKNAME (MAKE IT GOOD)</string>
+    <string name="welcome">Welcome</string>
+    <string name="im_ready">I\'m ready</string>
     <string name="contact_us">Contact us</string>
     <string name="lets_go">Let\'s go</string>
     <string name="tos">Terms &amp; Conditions</string>
