--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -39,6 +39,12 @@
     they\'ll need to open up their app and forfeit their ticket.\n\nSo you\'re sure this is your ticket?</string>
     <string name="already_claimed_touch_here">Log in by touching here!</string>
     <string name="try_different_code">Try different code</string>
+    <string name="forfeit_description">If you forfeit your ticket, you will be removed entirely from the game. You may
+    give your ticket code to a friend!\n\nThey can download the app and use the code to get started. Lucky them&#8230;</string>
+    <string name="copy_code">Copy your code: </string>
+    <string name="forfeit_ticket">Forfeit ticket</string>
+    <string name="forfeit_ticket_title">Forfeit ticket?</string>
+    <string name="keep_ticket">Keep my ticket</string>
     <string name="tos_content">THE KARTWHEEL (\"EVENT\") WAIVER &amp; RELEASE OF CLAIMS, INDEMNITY
         AGREEMENT, ASSUMPTION OF RISK, AND CONSENT TO MEDICAL TREATMENT (\"WAIVER &amp; RELEASE\")\n\n
         PLEASE READ THE FOLLOWING CAREFULLY, AS IT AFFECTS YOUR FUTURE LEGAL RIGHTS. BY PROCEEDING
