Enable sharing extra ticket

--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="forfeit_ticket">Forfeit ticket</string>
     <string name="forfeit_ticket_title">Forfeit ticket?</string>
     <string name="keep_ticket">Keep my ticket</string>
+    <string name="share_code">Share ticket code</string>
     <string name="tos_content">THE KARTWHEEL (\"EVENT\") WAIVER &amp; RELEASE OF CLAIMS, INDEMNITY
         AGREEMENT, ASSUMPTION OF RISK, AND CONSENT TO MEDICAL TREATMENT (\"WAIVER &amp; RELEASE\")\n\n
         PLEASE READ THE FOLLOWING CAREFULLY, AS IT AFFECTS YOUR FUTURE LEGAL RIGHTS. BY PROCEEDING
