Added maps view to show the course on race sign up page

--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -186,6 +186,7 @@
         connection with any dispute or claim with TEAM HANDSTAND related to matters covered by 
         this Agreement.
 </string>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
