--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -95,6 +95,8 @@
     give your ticket code to a friend!\n\nThey can download the app and use the code to get started. Lucky them&#8230;</string>
     <string name="copy_code">Copy your code:\u0020</string>
     <string name="need_selfie">Need a selfie, brah!</string>
+    <string name="wait_for_selfie_upload">Patience is key&#8230;Please wait for selfie to upload</string>
+    <string name="selfie_upload_failed">Unable to upload selfie. Please check your network and try again.</string>
     <string name="unclaimed_ticket">UNCLAIMED </string>
     <string name="forfeit_ticket">Forfeit ticket</string>
     <string name="forfeit_ticket_title">Forfeit ticket?</string>
