--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -97,6 +97,8 @@
     <string name="need_selfie">Need a selfie, brah!</string>
     <string name="wait_for_selfie_upload">Patience is key&#8230;Please wait for selfie to upload</string>
     <string name="selfie_upload_failed">Unable to upload selfie. Please check your network and try again.</string>
+    <string name="need_buddy">You need to pick a buddy before continuing!</string>
+    <string name="buddy_upload_failed">Unable to pick your buddy! Please check your network and try again.</string>
     <string name="unclaimed_ticket">UNCLAIMED </string>
     <string name="forfeit_ticket">Forfeit ticket</string>
     <string name="forfeit_ticket_title">Forfeit ticket?</string>
