Fix 'get one online' link

--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
     <string name="acorn">Acorn</string>
     <string name="earthquake">Earthquake</string>
     <string name="does_not_have_code">Don\'t have code? You\'ll either need to\n phone a friend
-    or <a href="www.handstand.us/karwheel">get one online</a>!</string>
+    or <a href="https://handstandwith.us/kartwheel">get one online</a>!</string>
     <string name="already_claimed_explanation">Someone has already claimed this ticket! In order to use this code,
     they\'ll need to open up their app and forfeit their ticket.\n\nSo you\'re sure this is your ticket?</string>
     <string name="already_claimed_touch_here">Log in by touching here!</string>
