Added furby or tamagachi; user input fields are shown before critical info section

--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="critical_information">Critical information</string>
     <string name="pancakes_waffles">Pancakes or Waffles?</string>
     <string name="charmander_squirtle">Charmander or Squirtle?</string>
+    <string name="furby_tamagachi">Furby or Tamagachi?</string>
     <string name="next">Next</string>
     <string name="first_name">FIRST</string>
     <string name="last_name">LAST</string>
