--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -41,8 +41,10 @@
     <string name="finished">Finished</string>
     <string name="registered">Registered %1$s</string>
     <string name="registration_closed">Registration is closed</string>
+    <string name="start_race">Start the race!</string>
     <string name="race_full">Race is full!</string>
     <string name="spots_left">%1$d spots left</string>
+    <string name="spots_available">+ %1$d Spots Available</string>
     <string name="race_name">#%1$d - %2$s</string>
     <string name="race_details">%1$d laps | %2$.3f miles</string>
 
