--- a/kartwheel/app/src/main/res/values/strings.xml
+++ b/kartwheel/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="spots_available">+ %1$d Spots Available</string>
     <string name="race_name">#%1$d - %2$s</string>
     <string name="race_details">%1$d laps | %2$.3f miles</string>
+    <string name="start_race">Start the race!</string>
 
     <string name="battery_life_text">Charge up! You need 20% to run a race!</string>
     <string name="race_count_down_title">Race starts in:</string>
